--- a/index.html
+++ b/index.html
@@ -1,3 +1,15 @@
+<!DOCTYPE html>
 <html>
-    
+        <link rel="stylesheet" href="css/style.css">
+
+    <head>
+        <title>
+            Crime Light
+        </title>
+    </head>
+    <body>
+        <div id = "map">
+            
+        </div>
+    </body>
 </html>
