--- a/index.html
+++ b/index.html
@@ -1,8 +1,17 @@
 <!DOCTYPE html>
+
+<head>
+    <title>index.html</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+
 <html>
-<body>
+    <body>
+        <div class="header">
+                <img class="logo" src="logo.png" alt="logo" height="41" width="415">
+        </div>
+        <div class="main">
 
-    <h1>The 5 Racketeers</h1>
-
-</body>
+        </div>
+    </body>
 </html>
