--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
 <html>
     <body>
         <div class="header">
-                <img class="logo" src="logo.png" alt="logo" height="41" width="415">
-        </div>
+                <a href="index.html">
+                    <img class="logo" src="logo.png" alt="logo" height="41" width="415">
+                </a>
+    </div>
         <div class="main">
-
+            <div class="contents">
+                
+            </div>
         </div>
     </body>
 </html>
