Some map JS stuff
Inserted some google maps implementation via JS

--- a/index.html
+++ b/index.html
@@ -12,8 +12,15 @@
                 <img class="logo" src="logo.png" alt="logo" height="41" width="415">
         </div>
         <div class="main">
+            <div id = "map">
 
-          
+            </div>
+            <script src = "script.js">
+            </script>
+          <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD_wuCRqJ5zvkLqyC1D0EM7fzgDlWMw5Cg&callback=initMap"
+          async defer></script>
+
+
         </div>
     </body>
 </html>
