Fixed content pane
Adjusted contents padding.

Main page content is ready to be added.

--- a/index.html
+++ b/index.html
@@ -12,11 +12,15 @@
                 <a href="index.html">
                     <img class="logo" src="logo.png" alt="logo" height="41" width="415">
                 </a>
-    </div>
+        </div>
         <div class="main">
             <div class="contents">
-                
+
             </div>
+        </div>
+        <div class="footer">
+            <hr>
+            <hr>
         </div>
     </body>
 </html>
