--- a/index.html
+++ b/index.html
@@ -16,18 +16,13 @@
         <div class="main">
 
             <div class="contents">
-<<<<<<< HEAD
-
-=======
             
                 <div id = "map">
-
-            </div>
-            <script src = "script.js">
-            </script>
-          <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD_wuCRqJ5zvkLqyC1D0EM7fzgDlWMw5Cg&callback=initMap"
-          async defer></script>
->>>>>>> 51d5d7625ef4bb8ceb3156a646ca511ce8e6cfc6
+                    <script src = "script.js">
+                    </script>
+                    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD_wuCRqJ5zvkLqyC1D0EM7fzgDlWMw5Cg&callback=initMap" async defer>
+                    </script>
+                </div>
             </div>
         </div>
         <div class="footer">
