--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             </div>
             <script src = "script.js">
             </script>
-          <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD_wuCRqJ5zvkLqyC1D0EM7fzgDlWMw5Cg&callback=initMap"
-          async defer></script>
+          <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD_wuCRqJ5zvkLqyC1D0EM7fzgDlWMw5Cg&callback=initMap">
+          </script>
 
 
         </div>
