--- a/index.html
+++ b/index.html
@@ -17,12 +17,13 @@
 
             <div class="contents">
             
-                <div id = "map">
-                    <script src = "script.js">
-                    </script>
-                    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD_wuCRqJ5zvkLqyC1D0EM7fzgDlWMw5Cg&callback=initMap" async defer>
-                    </script>
-                </div>
+                <div id = "map"></div>
+
+                <script src = "script.js">
+                </script>
+                <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD_wuCRqJ5zvkLqyC1D0EM7fzgDlWMw5Cg&callback=initMap" async defer>
+                </script>
+
             </div>
         </div>
         <div class="footer">
