--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 
 
 <head>
-    <title>index.html</title>
+    <title>About Us</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -16,13 +16,8 @@
         <div class="main">
 
             <div class="contents">
+            
                 
-                <div id = "map"></div>
-
-                <script src = "script.js">
-                </script>
-                <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD_wuCRqJ5zvkLqyC1D0EM7fzgDlWMw5Cg&callback=initMap" async defer>
-                </script>
 
             </div>
         </div>
