--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-    <title>Home | 5 Racketeers</title>
+    <title>Home | Crimelite</title>
     <meta name="viewport" content="initial-scale=1.0">
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
@@ -13,7 +13,7 @@
         <div class="header">
                 <a href="index.html">
 
-                    <img class="logo" src="logo.png" alt="logo" height="41" width="415">
+                    <img class="logo" src="logo.png" alt="logo" height="47" width="233">
                 </a>
         </div>
 
