--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 
 
 <head>
-    <title>About Us</title>
+    <title>About Us | Crimelite</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
