--- a/index.html
+++ b/index.html
@@ -11,10 +11,14 @@
 
     <body>
         <div class="header">
-                <a href="index.html">
-
-                    <img class="logo" src="logo.png" alt="logo" height="47" width="233">
-                </a>
+            <div class="logo-div">
+                    <a href="index.html">
+                            <img class="logo" src="logo.png" alt="logo" height="47" width="233">
+                    </a>
+            </div>
+            <div class="navigation">
+                <p>test stuff</p>
+            </div>
         </div>
 
         <div class="main">
@@ -33,6 +37,8 @@
         <div class="footer">
             <hr>
             <hr>
+            <img src="5racketeers.png" alt="the 5 racketeers logo" height="20" width="206">
+            <p style="margin-block-start: 0px; margin-block-end: 0px;" class="footer-text">Powered by Google Maps API<br>The 5 Racketeers is a group of student programmers from Northeastern University. They believe in raising awareness about crime and urban factors that influence it.</p>
         </div>
 
     </body>
