--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
 
     <body>
         <div class="header">
-                <a href="index.html">
-
-                    <img class="logo" src="logo.png" alt="logo" height="41" width="415">
-                </a>
+        <!-- <ul class = "top_bar"> -->
+                <a href="index.html"> <img class="logo" src="logo.png" alt="logo" height="41" width="415"></a>
+                 <a href="about.html">About Us</a>
+                  <!--  </ul> -->
+                    
         </div>
 
         <div class="main">
