--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
                     </a>
             </div>
             <div class="navigation">
-                <p>test stuff</p>
+                <div class="navigation-div">Home</div>
+                <div class="navigation-div">About</div>
             </div>
         </div>
 
