Frond End Nav Bar Update
Some More front end stuf!

--- a/index.html
+++ b/index.html
@@ -11,22 +11,17 @@
 
     <body>
         <div class="header">
-<<<<<<< HEAD
-        <!-- <ul class = "top_bar"> -->
-                <a href="index.html"> <img class="logo" src="logo.png" alt="logo" height="41" width="415"></a>
-                 <a href="about.html">About Us</a>
-                  <!--  </ul> -->
-                    
-=======
             <div class="logo-div">
                     <a href="index.html">
                             <img class="logo" src="logo.png" alt="logo" height="47" width="233">
                     </a>
             </div>
             <div class="navigation">
-                <p>test stuff</p>
+                <a href = "index.html"> Home</a>
+                <a href = "about.html"> About Us</a>
+                <a href = "#"> Temp1</a>
+                <a href = "#">Temp2</a>
             </div>
->>>>>>> ac084c32d180c1601ec6596b7f045fcb2ce25a9a
         </div>
 
         <div class="main">
