Fixed navigation bar sizing issues when window gets too small

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
                     </a>
             </div>
             <div class="navigation">
-                <a href = "index.html"> Home</a>
-                <a href = "about.html"> About Us</a>
-                <a href = "#"> Temp1</a>
-                <a href = "#">Temp2</a>
+                <div class="navigation-div"><a href = "index.html">Home</a></div>
+                <div class="navigation-div"><a href = "index.html">About Us</a></div>
+                <div class="navigation-div"><a href = "index.html">Temp</a></div>
+                <div class="navigation-div"><a href = "index.html">Temp</a></div>
 
             </div>
         </div>
