--- a/about.html
+++ b/about.html
@@ -1,29 +1,55 @@
 <!DOCTYPE html>
 
-
+<html>
 <head>
-    <title>About Us | Crimelite</title>
+    <title>About | Crimelite</title>
+    <meta name="viewport" content="initial-scale=1.0">
+    <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
 </head>
 
-<html>
+
     <body>
         <div class="header">
-                <a href="index.html">
-                    <img class="logo" src="logo.png" alt="logo" height="41" width="415">
-                </a>
+            <div class="logo-div">
+                    <a href="index.html">
+                            <img class="logo" src="logo.png" alt="logo" height="47" width="233">
+                    </a>
+            </div>
+            <div class="navigation">
+                <div class="navigation-div"><a href = "index.html">Home</a></div>
+                <div class="navigation-div"><a href = "about.html">About Us</a></div>
+                <div class="navigation-div"><a href = "index.html">Temp</a></div>
+                <div class="navigation-div"><a href = "index.html">Temp</a></div>
+
+            </div>
         </div>
-        <div class="main">
 
+        <div style="background-image: url(&quot;aboutbackground.png&quot;)" class="main">
             <div class="contents">
-            
-                
 
+                <p>Crimelite is a website created by The 5 Racketeers, a group of students from Northeastern University. 
+                    Crimelite explores the relationship between crime rates and the light level on the streets of Boston, 
+                    indicated by the presence of streetlights. Using data provided by the City of Boston through Analyze Boston,
+                     it visualizes crime rates and streetlight density. This is done through Google Maps API. Additionally,
+                     using this data and geohashing, the map can recommend locations to build new streetlights.
+                </p>
+                <div>
+                    <img src="Oliver.jpg" style="width:19%; margin: 0 auto;">
+                    <img src="Jovan.jpg" style="width:19%; margin: 0 auto;">
+                    <img src="Hayden.jpg" style="width:19%; margin: 0 auto;">
+                    <img src="Mattias.jpg" style="width:19%; margin: 0 auto;">
+                    <img src="Mobo.jpg" style="width:19%; margin: 0 auto;">
+
+                </div>
             </div>
         </div>
         <div class="footer">
             <hr>
             <hr>
+            <img src="5racketeers.png" alt="the 5 racketeers logo" height="20" width="206">
+            <p style="margin-block-start: 0px; margin-block-end: 0px;" class="footer-text">Powered by Google Maps API<br>The 5 Racketeers is a group of student programmers from Northeastern University. They believe in raising awareness about crime and urban factors that influence it.</p>
         </div>
+
     </body>
 </html>
