--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </div>
             <div class="navigation">
                 <div class="navigation-div"><a href = "index.html">Home</a></div>
-                <div class="navigation-div"><a href = "index.html">About Us</a></div>
+                <div class="navigation-div"><a href = "about.html">About Us</a></div>
                 <div class="navigation-div"><a href = "index.html">Temp</a></div>
                 <div class="navigation-div"><a href = "index.html">Temp</a></div>
 
