Working on Lookup Functionality
Added lookup navigation
lookup will display relevant information about the cell that contains a lonlat

--- a/about.html
+++ b/about.html
@@ -16,11 +16,13 @@
                             <img class="logo" src="logo.png" alt="logo" height="47" width="233">
                     </a>
             </div>
-            <div class="navigation">
-                <div class="navigation-div"><a href = "index.html">Home</a></div>
+          <div class="navigation">
                 <div class="navigation-div"><a href = "about.html">About Us</a></div>
+                <div class="navigation-div"><a href = "lookup.html">Lookup</a></div>
+                <div class="navigation-div"><a href = "index.html">Home</a></div>
+                <!--
                 <div class="navigation-div"><a href = "index.html">Temp</a></div>
-                <div class="navigation-div"><a href = "index.html">Temp</a></div>
+                <div class="navigation-div"><a href = "index.html">Temp</a></div>-->
 
             </div>
         </div>
