--- a/index.html
+++ b/index.html
@@ -28,7 +28,13 @@
         <div class="main">
             <div class="contents">
 
-                
+                    <div id="style-selector-control"  class="map-control">
+                            <select id="style-selector" class="selector-control">
+                              <option value="default">Default</option>
+                              <option value="retro" selected="selected">Retro</option>
+                              <option value="hiding">Hide features</option>
+                            </select>
+                          </div>
                 <div id = "map"></div>
 
                 <script src = "script.js">
