--- a/lookup.html
+++ b/lookup.html
@@ -32,14 +32,15 @@
 
                 <div id="instructions">Instructions: Lookup an address for information about its safety</div>
                 <form id="address-form">
-                    <input type="textbox" id="address-input" value="96 The Fenway">
+                    <input type="textbox" id="address-input" value="96 The Fenway"
+                    onkeydown="if (event.keyCode == 13) return false;" />
                     <input type="button" id="address-submit" value="Look Up">
                 </form>
                 <div id = "mapcontainer">
                     <div id="maplookup"></div>
                     <div id = "datadiv">
-                        <p id="crimetag">Crime Levels</p>
-                        <p id="lighttag">Streetlamps Nearby</p>
+                        <p id="crimetag">Geohash</p>
+                        <p id="lighttag">Data2</p>
                     </div>
                 </div>
                 <script src="lookup.js"></script>
