--- a/lookup.html
+++ b/lookup.html
@@ -31,10 +31,9 @@
             <div class="contents">
 
                 <div id="instructions">Instructions: Lookup an address for information about its safety</div>
-                <form id="address-form">
-                    <input type="textbox" id="address-input" value="96 The Fenway"
-                    onkeydown="if (event.keyCode == 13) return false;" />
-                    <input type="button" id="address-submit" value="Look Up">
+                <form id="address-form" onsubmit="updateMap()">
+                    <input type="textbox" id="address-input" value="96 The Fenway"/>
+                    <input type="submit" id="address-submit" value="Look Up">
                 </form>
                 <div id = "mapcontainer">
                     <div id="maplookup"></div>
