--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@
 
                 
                 <div id = "map"></div>
-
+                <div id="floating-panel">
+                    <button onclick="toggleHeatmap()">Toggle Heatmap</button>
+                    <button onclick="changeGradient()">Change gradient</button>
+                    <button onclick="changeRadius()">Change radius</button>
+                    <button onclick="changeOpacity()">Change opacity</button>
+                  </div>
                 <script src = "script.js">
                 </script>
                 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD_wuCRqJ5zvkLqyC1D0EM7fzgDlWMw5Cg&callback=initMap" async defer>
