--- a/lookup.html
+++ b/lookup.html
@@ -33,7 +33,7 @@
                 <div id="instructions">Instructions: Lookup an address for information about its safety</div>
                 <form id="address-form">
                     <input type="textbox" id="address-input" value="96 The Fenway"
-                    onkeydown="if (event.keyCode == 13) return false;" />
+                    onkeydown="if (event.keyCode == 13) {document.getElementById('address-submit').click(); return false;}" />
                     <input type="button" id="address-submit" value="Look Up">
                 </form>
                 <div id = "mapcontainer">
