--- a/lookup.html
+++ b/lookup.html
@@ -39,11 +39,15 @@
                 <div id = "mapcontainer">
                     <div id="maplookup"></div>
                     <div id = "datadiv">
-                        <p id="crimetag">Crime Levels</p>
-                        <p id="lighttag">Streetlamps Nearby</p>
+                        <p id="data1"></p>
+                        <h2 id="info1"></h2>
+                        <p id="data2"></p>
+                        <h2 id="info2"></h2>
                     </div>
                 </div>
                 <script src="lookup.js"></script>
+                <script src="geohash.js"></script>
+                <script src="cellsummaries.js"></script>
                 <script async defer
                     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCqwbkkPdWIwpmJ1TXOP-38zIOW5uahJAQ&callback=initMap">
                     </script>
