--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
                     </a>
             </div>
           <div class="navigation">
-                <div class="navigation-div"><a href = "about.html">About Us</a></div>
+                <div class="navigation-div" style="background-color: lightgray"><a href = "about.html">About Us</a></div>
                 <div class="navigation-div"><a href = "lookup.html">Lookup</a></div>
                 <div class="navigation-div"><a href = "index.html">Home</a></div>
                 <!--
