--- a/lookup.html
+++ b/lookup.html
@@ -18,7 +18,7 @@
             </div>
             <div class="navigation">
                     <div class="navigation-div"><a href = "about.html">About Us</a></div>
-                    <div class="navigation-div"><a href = "lookup.html">Lookup</a></div>
+                    <div class="navigation-div" style="background-color: lightgray"><a href = "lookup.html">Lookup</a></div>
                     <div class="navigation-div"><a href = "index.html">Home</a></div>
                     <!--
                     
