--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <div id = "map"></div>
 
                 
-                <script async defer  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD_wuCRqJ5zvkLqyC1D0EM7fzgDlWMw5Cg&libraries=visualization&callback=initMap"></script>>
+                <script async defer  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD_wuCRqJ5zvkLqyC1D0EM7fzgDlWMw5Cg&libraries=visualization&callback=initMap"></script>
                 
 
             </div>
