--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
                     </a>
             </div>
           <div class="navigation">
-                <div class="navigation-div"><a href = "about.html">About Us</a></div>
+                <div class="navigation-div" style="background-color: lightgray"><a href = "about.html">About Us</a></div>
                 <div class="navigation-div"><a href = "lookup.html">Lookup</a></div>
                 <div class="navigation-div"><a href = "index.html">Home</a></div>
                 <!--
@@ -36,12 +36,12 @@
                      it visualizes crime rates and streetlight density. This is done through Google Maps API. Additionally,
                      using this data and geohashing, the map can recommend locations to build new streetlights.
                 </p>
-                <div>
-                    <img src="Oliver.jpg" style="width:19%; margin: 0 auto;">
-                    <img src="Jovan.jpg" style="width:19%; margin: 0 auto;">
-                    <img src="Hayden.jpg" style="width:19%; margin: 0 auto;">
-                    <img src="Mattias.jpg" style="width:19%; margin: 0 auto;">
-                    <img src="Mobo.jpg" style="width:19%; margin: 0 auto;">
+                <div style="max-width: 85%; ">
+                    <img src="Oliver.jpg" style="max-width: 19%; margin: 0 auto;">
+                    <img src="Jovan.jpg" style="max-width: 19%; margin: 0 auto;">
+                    <img src="Hayden.jpg" style="max-width: 19%;  margin: 0 auto;">
+                    <img src="Mattias.jpg" style="max-width: 19%;margin: 0 auto;">
+                    <img src="Mobo.jpg" style="max-width: 19%;  margin: 0 auto;">
 
                 </div>
             </div>
