--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                             <select id="style-selector" class="selector-control">
                               <option value="default">Default</option>
                               <option value="retro" selected="selected">Retro</option>
+                              <option value="huskymode" selected="selected">Husky Mode</option>
                               <option value="hiding">Hide features</option>
                             </select>
                           </div>
