Another update. Sorry Bolaji.

--- a/summary.html
+++ b/summary.html
@@ -6,19 +6,8 @@
     <meta name="viewport" content="initial-scale=1.0">
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
-    <script src="giveittome.js"></script>
+    <script src="celldata.js"></script>
     <script src="tryAgain.js"></script>
-    <style>
-      #overlay {
-        background-image: url('logo-no-text.png');
-        background-size: 100px auto;
-        background-color: rgb(229, 227, 223);
-        position: fixed;
-        width: 100%;
-        height: 100%;
-        z-index: 100;
-      }
-    </style>
 </head>
     <body>
         <div class="header">
