--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </div>
             <div class="navigation">
                     <div class="navigation-div"><a href = "about.html">About Us</a></div>
-                    <div class="navigation-div">Summary</a></div>
+                    <div class="navigation-div"><a href = "summary.html">Summary</a></div>
                     <div class="navigation-div"><a href = "lookup.html">Lookup</a></div>
                     <div class="navigation-div" style="background-color: lightgray"><a href = "index.html">Home</a></div>
                     <!--
