--- a/summary.html
+++ b/summary.html
@@ -30,7 +30,7 @@
 
     <div class="main">
       <div class="contents">
-          <div id="floating-panel" class="map-control">
+          <div id="floating-panel">
             <button onclick="toggleCells()">Toggle blocks</button>
             <br>
             <form> Crimes <input type="radio" onchange="recomputeOpacity()" name="gender" value="crime" id="crime">
