--- a/about.html
+++ b/about.html
@@ -37,17 +37,17 @@
                      it visualizes crime rates and streetlight density. This is done through Google Maps API. Additionally,
                      using this data and geohashing, the map can recommend locations to build new streetlights.
                 </p>
-                <div style="max-width: 98%; ">
-                    <table>
-                    <tr>
-                    <td><img src="Oliver.jpg" style="max-width: 110%; margin: 0 auto;"><p>Oliver Dai</p></td>
-                    <td><img src="Jovan.jpg" style="max-width: 110%; margin: 0 auto;"><p>Jovan Jean</p></td>
-                    <td><img src="Hayden.jpg" style="max-width: 110%;  margin: 0 auto;"><p>Hayden DeAngelis</p></td>
-                    <td><img src="Mattias.jpg" style="max-width: 110%;margin: 0 auto;"><p>Mattias Kools</p></td>
-                    <td><img src="Mobo.jpg" style="max-width: 110%;  margin: 0 auto;"><p>Mobolaji Rotibi</p></td>
-                </tr>
-                    </table>
-                </div>
+                <div style="max-width: 98%; max-height: 40%;">
+                        <table style="table-layout: fixed">
+                        <tr>
+                        <td><img src="Oliver.jpg" style="width:100%; margin: 0 auto;"><p style="margin-block-end: 0; margin-block-start: 0">Oliver Dai</p></td>
+                        <td><img src="Jovan.jpg" style="width:100%; margin: 0 auto;"><p style="margin-block-end: 0; margin-block-start: 0">Jovan Jean</p></td>
+                        <td><img src="Hayden.jpg" style="width:100%;  margin: 0 auto;"><p style="margin-block-end: 0; margin-block-start: 0">Hayden DeAngelis</p></td>
+                        <td><img src="Mattias.jpg" style="width:100%; margin: 0 auto;"><p style="margin-block-end: 0; margin-block-start: 0">Mattias Kools</p></td>
+                        <td><img src="Mobo.jpg" style="width:100%; margin: 0 auto;"><p style="margin-block-end: 0; margin-block-start: 0">Mobolaji Rotibi</p></td>
+                    </tr>
+                        </table>
+                    </div>
             </div>
         </div>
         <div class="footer">
